--- a/src/Components/Admin/admin.css
+++ b/src/Components/Admin/admin.css
@@ -3,9 +3,13 @@
   .admin_image{
         border: 1px solid black;
         border-radius: 50%;
-        width: 60px;
-        height: 60px;
+        width: 50px;
+        height: 50px;
+        cursor: pointer;
   }
   .navbar-text{
       font-weight: 500;
+  }
+  .app_text{
+    cursor:pointer;
   }
