--- a/src/main.css
+++ b/src/main.css
@@ -249,6 +249,7 @@ pre code {
   word-break: normal;
 }
 
+
 code {
   font-size: 0.875em;
   color: #d63384;
@@ -2488,6 +2489,9 @@ textarea.form-control-lg {
   opacity: 0.65;
 }
 
+.btn-secondary{
+  background-color: #5F6368 !important;
+}
 .form-range {
   width: 100%;
   height: 1.5rem;
@@ -6990,7 +6994,7 @@ background-color: rgb(21, 187, 21);
 }
 .bg-primary {
   --bs-bg-opacity: 1;
-  background-color: #ffffff !important;
+  background-color: #ff9933 !important;
 }
 .bg-sidebar{
   --bs-bg-opacity: 1;
