--- a/src/Components/Admin/admin.css
+++ b/src/Components/Admin/admin.css
@@ -13,3 +13,9 @@
   .app_text{
     cursor:pointer;
   }
+  .adminimage{
+    border-radius: 8px;
+    border: 1px solid #f7690aec;
+    box-shadow: 2px 2px 10px 1px orange;
+  }
+  
