--- a/src/Components/Admin/admin.css
+++ b/src/Components/Admin/admin.css
@@ -18,4 +18,11 @@
     border: 1px solid #f7690aec;
     box-shadow: 2px 2px 10px 1px orange;
   }
+
+  .verify{
+    color:green
+  }
   
+  .solve{
+    color:red
+  }
